gccida/c0/set_mem_expr
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_mem_expr/src/emit-rtl.c:2357:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( mem[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_mem_expr/src/emit-rtl.c:2361:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( mem[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_mem_expr/src/emit-rtl.c:2365:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( mem[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_mem_expr/src/emit-rtl.c:2377:1: error: statement requires expression of scalar type ('struct rtx_def' invalid)
if ( mem[1] ) 
^    ~~~~~~
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_mem_expr/src/emit-rtl.c:2381:65: error: use of undeclared identifier 'machine_mode'
*( _QWORD *)&mem[1] = get_mem_attrs( v6, expr, v5, v4, align, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)mem)); 
                                                                ^
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_mem_expr/src/emit-rtl.c:2381:80: error: expected expression
*( _QWORD *)&mem[1] = get_mem_attrs( v6, expr, v5, v4, align, ( machine_mode)( unsigned __int8)BYTE2( *( _DWORD *)mem)); 
                                                                               ^
6 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/set_mem_expr/src/obj/emit-rtl.o] Error 1
